log
Thu 21 Mar 2024 04:04:47 PM UTC: 
 tests:  0|5
total_score: 0/70
352308e
Thu 21 Mar 2024 05:41:42 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |    for(int i = 1; i <= 10; i++)
      |    ^~~
exercises.c:47:42: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   47 |      push(L, (void*)malloc(sizeof(int)));)
      |                                          ^
exercises.c:47:42: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
d951ce6
Thu 21 Mar 2024 05:42:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a3b5473
Thu 21 Mar 2024 05:44:38 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
77b5871
Thu 21 Mar 2024 05:45:40 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:8: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   52 |        push_back(L, dato);
      |        ^~~~~~~~~
      |        pushBack
cc1: all warnings being treated as errors
Compilation failed
b32466f
Thu 21 Mar 2024 05:45:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1d982b4
Thu 21 Mar 2024 06:02:12 PM UTC: 
 exercises.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |       suma = dato;
      |            ^
exercises.c:70:12: error: expected expression before ‘List’
   70 |       next(List *L)
      |            ^~~~
exercises.c:70:20: error: expected ‘;’ before ‘}’ token
   70 |       next(List *L)
      |                    ^
      |                    ;
   71 |     }
      |     ~               
exercises.c:64:7: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   64 |   int suma = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
5115a8d
Thu 21 Mar 2024 06:02:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |       suma = dato;
      |            ^
exercises.c:70:12: error: expected expression before ‘List’
   70 |       next(List *L);
      |            ^~~~
exercises.c:64:7: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   64 |   int suma = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
a057e42
Thu 21 Mar 2024 06:02:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:13: error: expected expression before ‘=’ token
   69 |       suma* = dato;
      |             ^
exercises.c:70:12: error: expected expression before ‘List’
   70 |       next(List *L);
      |            ^~~~
Compilation failed
fcba163
Thu 21 Mar 2024 06:02:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:13: error: expected expression before ‘=’ token
   69 |       suma* = dato;
      |             ^
exercises.c:70:12: error: invalid use of incomplete typedef ‘List’
   70 |       next(*L, dato);
      |            ^~
exercises.c:70:7: error: too many arguments to function ‘next’
   70 |       next(*L, dato);
      |       ^~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:14:7: note: declared here
   14 | void* next(List *L);
      |       ^~~~
Compilation failed
d1354c3
Thu 21 Mar 2024 06:03:40 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:20: error: expected expression before ‘;’ token
   69 |       suma += dato*;
      |                    ^
Compilation failed
41693fd
Thu 21 Mar 2024 06:03:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:19: error: invalid operands to binary * (have ‘int *’ and ‘int *’)
   69 |       suma += dato*
      |                   ^
Compilation failed
b8d1ad0
